stop flickering

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -174,7 +174,7 @@ a.subtle-link {
     line-height: 1;
     opacity: 0;
     transition: all 0.22s;
-    transform: translateY(280px);
+    transform: translateY(80px);
     span {
       padding: 10px 15px;
       background: #fff;
